--- a/sheriyans/package.json
+++ b/sheriyans/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ejaz Ansari",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "accessibility": "^3.0.9",
+    "one-liner-joke": "^1.2.2"
+  }
 }
