--- a/sheriyans/package.json
+++ b/sheriyans/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "accessibility": "^3.0.9",
+    "express": "^5.1.0",
     "one-liner-joke": "^1.2.2"
-  }
+  },
+  "type": "module"
 }
